objects/SFDC_Request_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Activity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Analysis/Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import/Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SFDC_Change_Request__c</fullName>
        <label>SFDC Change Request</label>
        <referenceTo>SFDC_Change_Request__c</referenceTo>
        <relationshipName>SFDC_Request_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <inlineHelpText>Enter the time spend on this activity in quarter hour increments.</inlineHelpText>
        <label>Time (Hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person completing the activity</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Request_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IS Dev Activity</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}{0}</displayFormat>
        <label>Comment#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IS Dev Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Creator_not_SF_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.FirstName = &apos;Salesforce&apos;, $User.LastName = &apos;Administrator&apos;)</errorConditionFormula>
        <errorMessage>IS Activities cannot be created by the User named &quot;Salesforce Administrator&quot;.  Please use your personal login to create IS Activities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_enter_time_for_activities</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT( ISPICKVAL( Activity_Type__c , &quot;Question&quot; )) ,
NOT( ISPICKVAL( Activity_Type__c , &quot;Project Update&quot; )),
ISNULL(Time__c) 
)</errorConditionFormula>
        <errorDisplayField>Time__c</errorDisplayField>
        <errorMessage>You must enter the time spent on this Activity.</errorMessage>
    </validationRules>
</CustomObject>